Values since yesterday: title

--- a/templates/data.html.twig
+++ b/templates/data.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Sorry!{% endblock %}</title>
+        <title>{% block title %}COVID data for {{ name }}{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
