--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -22,6 +22,10 @@ tr:nth-child(odd) td {
     background-color: #eeeeee;
 }
 
+tr:nth-child(odd) td.more {
+    background-color: #eca1a6;
+}
+
 td {
     text-align: center;
 }
