removed link button

--- a/templates/data.html.twig
+++ b/templates/data.html.twig
@@ -29,7 +29,7 @@
                     <td>{{ delta_since|date('Y-m-d H:i:s') }}</td>
                 </tr>
                     <td>Source</td>
-                    <td>{{ source }} <a href="{{ source }}" class="btn btn-secondary">LINK</a></td>
+                    <td><a href="{{ source }}">{{ source }}</a></td>
                 </tr>
                     <td>Description</td>
                     <td>{{ source_description }}</td>
